Fix UI is broken on mobile

--- a/src/pages/members/MemberStack/MemberStack.sass
+++ b/src/pages/members/MemberStack/MemberStack.sass
@@ -61,7 +61,7 @@
       display: none
 
     .ant-modal-body
-      width: 400px
+      max-width: 380px
       padding: 0
       display: flex
       flex-direction: column
@@ -106,8 +106,10 @@
         .member-detail__name
           font-size: 1.2rem
           align-self: flex-end
-          padding: 20px 10px
+          padding: 0 10px
           font-weight: bold
+          height: 2.5rem
+          margin-bottom: .7em
 
       .member-detail__info-wrapper
         padding: 20px
